--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:resource="@xml/network_security_config" />
 
         <activity
-            android:name=".StudentsListActivity"
+            android:name=".FoodListActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
